@@ -724,8 +724,11 @@
           <version>3.13.0</version>
           <configuration>
             <release>${maven.compiler.release}</release>
+            <fork>true</fork>
             <compilerArgs>
-              <arg>--add-modules=jdk.incubator.vector</arg>
+              <arg>--add-modules</arg>
+              <arg>jdk.incubator.vector</arg>
+              <arg>--enable-preview</arg>
               <arg>-Xpkginfo:always</arg>
             </compilerArgs>
             <annotationProcessorPaths>
@@ -742,7 +745,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.2.5</version>
           <configuration>
-            <argLine>${argLine} --enable-preview --add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Dnet.bytebuddy.experimental=true --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+            <argLine>${argLine} --enable-preview --add-modules jdk.incubator.vector --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
             <systemPropertyVariables>
               <episteme.benchmark.skip>true</episteme.benchmark.skip>
             </systemPropertyVariables>
